Fix du stretch des images, création du responsive avec flex pour les restaurants & les étapes du fonctionnement, et l'alignement centré du footer

--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -7,6 +7,10 @@
         text-decoration: none;
         font-family: $font-family-title;
         font-size: 18px;
+
+        @media only screen and (min-width: 700px) {
+            text-align: center;
+        }
     }
 
     &__elements {
@@ -28,6 +32,13 @@
                     padding-right: 10px;
                 }
             }
+        }
+
+        @media only screen and (min-width: 700px) {
+            max-width: 700px;
+            margin-right: auto;
+            margin-left: auto;
+            text-align: center;
         }
     }
 }
