--- a/scss/layout/_restaurants.scss
+++ b/scss/layout/_restaurants.scss
@@ -12,6 +12,7 @@
         position: relative;
         background-color: white;
         border-radius: 0 0 15px 15px;
+        flex: 1 0 100%;
 
         &:not(:nth-child(1)) {
             margin-top: 20px;
@@ -33,6 +34,7 @@
             height: 175px;
             width: 100%;
             border-radius: 15px 15px 0 0;
+            object-fit: cover;
         }
 
         &__content {
@@ -63,5 +65,20 @@
                 }
             }
         }
+
+        @media only screen and (min-width: 700px) {
+            flex: 1 0 calc(45% - 20px);
+            width: calc(45% - 20px);
+            margin-top: 20px;
+
+            &:nth-child(2n) {
+                margin-left: 20px;
+            }
+        }
     }
+}
+
+.restaurants-flex-container {
+    display: flex;
+    flex-wrap: wrap;
 }
